component: add input component

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -10,9 +10,9 @@
 		}
 */
 
-$pley-gray: #F6F6F6;
-$pley-another-gray: #BDBDBD;
-$pley-black: #000000;
+$pley-light-gray: #F6F6F6;
+$pley-dark-gray: #BDBDBD;
+$pley-black: rgba(0, 0, 0, 0.5);
 $pley-white: #FFFFFF;
 $pley-green: #5DB075;
 $pley-red: #FF3B30;
