component: add business card

--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -1,13 +1,15 @@
 @use "../../styles/_colors.scss";
+@import '../../styles/_layout.scss';
 
 .input {
-	width: 180px;
+	@include fill-width();
 	height: 50px;
 	margin: 0;
 	background: colors.$pley-light-gray;
 	outline: none;
 	border: none;
 	padding-left: 24px;
+	display: inline-block;
 }
 
 .input--left-rounded {
