--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -11,7 +11,8 @@
 */
 
 $pley-light-gray: #F6F6F6;
-$pley-dark-gray: #BDBDBD;
+$pley-dark-gray: #666666;
+$pley-gray-secondary: #BDBDBD;
 $pley-black: rgba(0, 0, 0, 0.5);
 $pley-white: #FFFFFF;
 $pley-green: #5DB075;
