--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,9 +1,32 @@
+@use '../styles/_colors.scss';
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600&family=Roboto:wght@100&display=swap');
 @import '../styles/_layout.scss';
 
 h1 {
 	font-family: 'Inter', sans-serif;
 	font-size: calc-rem(24);
+	font-weight: bold;
 }
 
+h2 {
+	font-family: 'Inter', sans-serif;
+	font-size: calc-rem(16);
+	font-weight: bold;
+}
+
+.paragraph {
+	font-family: 'Inter', sans-serif;
+	font-size: calc-rem(14);
+}
+
+@mixin main-paragraph() {
+	@extend .paragraph;
+	font-weight: bold;
+	color: colors.$pley-dark-gray;
+}
+
+@mixin secondary-paragraph() {
+	@extend .paragraph;
+	color: colors.$pley-gray-secondary;
+}
 
