--- a/src/components/Reviews/Reviews.module.scss
+++ b/src/components/Reviews/Reviews.module.scss
@@ -1,6 +1,8 @@
-@import '../../styles/layout';
+@import '../../styles/_layout.scss';
+@import '../../styles/_fonts.scss';
 
 .flex-container {
+	margin-top: calc-rem(14);
   @include place-items(flex-start, center, row);
   img {
     width: 40px;
@@ -8,4 +10,14 @@
     border-radius: 50%;
     margin-right: 8px;
   }
+}
+
+.star-icon {
+	width: 16px;
+	height: 12px;
+}
+
+.text-review {
+	text-align: justify;
+	@include secondary-paragraph();
 }
