--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -1,36 +1,26 @@
-@use "../../styles/_colors.scss";
-@import '../../styles/_layout.scss';
+@use "../../styles/colors";
 
 .input-container {
-	position: relative;
-	@include fill-width();
+  display: flex;
+  align-items: center;
+  background-color: colors.$pley-light-gray;
+  padding-left: 16px;
+  border: 1px solid colors.$pley-gray-secondary;
 }
 
 .input {
-	@include fill-width();
-	height: 50px;
-	margin: 0;
-	background: colors.$pley-light-gray;
-	outline: none;
-	border: none;
-	padding-left: 32px;
-	display: inline-block;
-}
-
-.input-icon {
-	position: absolute;
-	top: 50%;
-	transform: translate(0, -50%);
-	left: 8px;
-	width: 16px;
-	height: 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  min-height: 50px;
+  padding-left: 16px;
 }
 
 .input--left-rounded {
-	border-radius: 8px 0px 0px 8px;
+  border-radius: 8px 0px 0px 8px;
 }
 
 .input--right-rounded {
-	border-radius: 0 8px 8px 0;
-	border-left: 1px solid colors.$pley-black;
+  border-radius: 0 8px 8px 0;
 }
