--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -10,18 +10,18 @@ h1 {
 
 h2 {
   font-family: $project-font; 
-  font-size: 16;
+  font-size: 16px;
   color: colors.$pley-black;
 }
 
 h3 {
   font-family: $project-font; 
-  font-size: 14;
+  font-size: 14px;
   color: colors.$pley-dark-gray;
 }
 
 p {
   font-family: $project-font; 
-  font-size: 14;
+  font-size: 14px;
   color: colors.$pley-gray-secondary;
 }
