Add business hours component

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -20,7 +20,7 @@ h3 {
   color: colors.$pley-dark-gray;
 }
 
-p {
+p, span, div {
   font-family: $project-font; 
   font-size: 14px;
   color: colors.$pley-gray-secondary;
