--- a/index.css
+++ b/index.css
@@ -1,49 +1,92 @@
 body {
-  padding: 5%;
+  padding: 0 32px;
 }
 
-.space-between {
-  display: flex;
-  justify-content: space-between;
-}
+/* general */
 
-.business-card {
-  margin: 0;
-  padding: 5%;
+main {
   display: flex;
   flex-direction: column;
 }
 
-img {
-  height: 300px;
+/* business card */
+.business-card {
+  padding: 16px;
 }
 
-.business-list {
-  display: grid;
-  grid-template-columns: 1fr;
-  row-gap: 24px;
+.business-card a p {
+  color: #415462;
+  text-decoration: none;
 }
 
-.input-valid {
-  border: 3px solid rgb(52, 171, 52);
+.business-card img {
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
 }
 
-.input-invalid {
-  border: 3px solid red;
+.business-card i {
+  width: 32px;
+  height: 32px;
 }
 
-@media (min-width: 820px) {
-  .business-list {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 16px;
-  }
+/* review */
+.user-profile {
+  display: flex;
+  gap: 16px;
+  align-items: center;
 }
 
-@media (min-width: 1200px) {
+.user-profile img {
+  width: 48px;
+  height: 48px;
+}
+
+.user-profile p {
+  margin-bottom: 0;
+}
+
+.review-icon {
+  color: #f4da2a;
+}
+
+/* Business list */
+article {
+  margin: 20px 0px;
+  padding: 0;
+}
+
+@media only screen and (min-width: 1024px) {
   .business-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 24px;
+    grid-column-gap: 8px;
+    grid-row-gap: 16px;
+    min-height: 0;
+    min-width: 0;
+  }
+
+  .business-card__detail {
+    padding: 16px;
+  }
+
+  .business-card__detail img {
+    width: 100%;
+    max-height: 400px;
+    object-fit: cover;
+  }
+
+  .business-card {
+    padding: 16px;
+    max-width: 460px;
+    overflow: hidden;
+    min-width: 0;
+  }
+
+  .business-card__address {
+    max-width: 460px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
