--- a/index.css
+++ b/index.css
@@ -2,8 +2,8 @@ body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4; /* Light background color */
-  color: #333; /* Default text color */
+  background-color: #f4f4f4;
+  color: #333;
   line-height: 1.6;
   padding: 2% 10%;
 }
@@ -13,12 +13,12 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 auto; /* Center the form horizontally */
+  margin: 0 auto;
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  gap: 15px; /* Adds space between form elements */
+  gap: 15px;
 }
 
 /* Input styling */
@@ -28,13 +28,13 @@ input {
   font-size: 16px;
   border: 1px solid #ddd;
   border-radius: 5px;
-  box-sizing: border-box; /* Ensures padding does not affect width */
+  box-sizing: border-box;
   margin-bottom: 10px;
   transition: border-color 0.3s ease;
 }
 
 input:focus {
-  border-color: #007bff; /* Blue border on focus */
+  border-color: #007bff;
   outline: none;
 }
 
@@ -48,17 +48,16 @@ button {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  width: 100%; /* Full width on mobile */
+  width: 100%;
 }
 
 button:hover {
   background-color: #0056b3;
 }
 
-/**/
 .results-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Three columns on desktop */
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   padding: 20px;
 }
@@ -97,8 +96,8 @@ button:hover {
 /* Business Image */
 .business-card img {
   width: 100%;
-  height: 180px; /* Fixed height for all images */
-  object-fit: cover; /* Ensures the image maintains its aspect ratio */
+  height: 180px;
+  object-fit: cover;
   border-radius: 5px;
   margin-top: 12px;
   border: 1px solid #ddd;
@@ -219,18 +218,26 @@ button:hover {
   border-bottom: 1px solid #ddd;
 }
 
+.business-open {
+  color: green;
+}
+
+.business-closed {
+  color: red;
+}
+
 /* For mobile screens: display one card per row */
 @media (max-width: 768px) {
   .results-container {
-    grid-template-columns: 1fr; /* Single column on mobile */
+    grid-template-columns: 1fr;
   }
 
   .business-card {
-    padding: 12px; /* Slightly reduced padding on mobile */
+    padding: 12px;
   }
 
   .business-card li {
-    font-size: 12px; /* Smaller font size for mobile */
+    font-size: 12px;
   }
 
   .business-card img {
